# face_apis

./: pyproject.toml
face_apis/: face_api.py  face_api_fr.py
tests/: test_face_recognition.py
